# OpenGothic

./: .gitignore  CMakeLists.txt  env_check.sh
android/: AndroidManifest.xml  CMakeLists.txt
android_profiles_app/: build.gradle  settings.gradle
android_profiles_app/app/: build.gradle
android_profiles_app/app/src/main/: AndroidManifest.xml
android_profiles_app/app/src/main/assets/profiles/: alt.json  default.json
android_profiles_app/app/src/main/cpp/: CMakeLists.txt
android_profiles_app/app/src/main/java/com/example/input/: VirtualActionEngine.kt
android_profiles_app/app/src/main/java/com/example/profilesapp/: EditProfileActivity.kt  InputMapper.kt  MainActivity.kt  MappingAdapter.kt  ProfileAdapter.kt  ProfileLibraryManager.kt  (+2 more)
android_profiles_app/app/src/main/res/layout/: activity_edit.xml  activity_main.xml  input_overlay.xml
android_profiles_app/app/src/main/res/menu/: main_menu.xml
android_profiles_app/app/src/main/res/values/: strings.xml
android_profiles_app/app/src/main/res/xml/: overlay_service.xml
backend/: IAudioBackend.h  IFileSystemBackend.h  IInputBackend.h  INativeGlue.h
backend/android/: AndroidAudioBackend.cpp  AndroidAudioBackend.h  AndroidFileSystemBackend.cpp  AndroidFileSystemBackend.h  AndroidInputBackend.cpp  AndroidInputBackend.h  AndroidNativeGlue.cpp  AndroidNativeGlue.h  GestureRecognizer.h  android_main.cpp
docs/: android_integration_guide.md  regoth_legacy_analysis.md
input/: InputEvent.h  InputMapper.cpp  InputMapper.h  InputMapperJNI.cpp  InputProfile.cpp  InputProfile.h
tests/: input_backend_tests.cpp
(+2 files in other folders)
